--- a/s2i-zuul-scheduler/test/test-app/logging.conf
+++ b/s2i-zuul-scheduler/test/test-app/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,zuul,gerrit,gear
+keys=root,zuul,gear
 
 [handlers]
 keys=console,debug,normal
@@ -16,11 +16,6 @@ level=DEBUG
 handlers=debug,normal
 qualname=zuul
 
-[logger_gerrit]
-level=INFO
-handlers=debug,normal
-qualname=gerrit
-
 [logger_gear]
 level=WARNING
 handlers=debug,normal
@@ -36,13 +31,13 @@ args=(sys.stdout,)
 level=DEBUG
 class=logging.handlers.WatchedFileHandler
 formatter=simple
-args=('/var/log/zuul/merger-debug.log',)
+args=('/var/log/zuul/zuul-debug.log',)
 
 [handler_normal]
 level=INFO
 class=logging.handlers.WatchedFileHandler
 formatter=simple
-args=('/var/log/zuul/merger.log',)
+args=('/var/log/zuul/zuul.log',)
 
 [formatter_simple]
 format=%(asctime)s %(levelname)s %(name)s: %(message)s
