--- a/s2i-zuul-scheduler/test/test-app/zuul.conf
+++ b/s2i-zuul-scheduler/test/test-app/zuul.conf
@@ -3,11 +3,9 @@ server=127.0.0.1
 
 [gearman_server]
 start=true
-log_config=/etc/zuul/gearman-logging.conf
 
 [zookeeper]
-hosts=192.168.1.122
-
+hosts=localhost
 
 [scheduler]
-log_config=/etc/zuul/scheduler-logging.conf
+tenant_config=/etc/zuul/main.yaml
